##Text encoding: utf-8

2011-04-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* all files: still more gcugtk split work, should be complete now.

2011-04-19  Jean Bréfort  <jean.brefort@normalesup.org>
	* all files: more gcugtk split work.

2011-04-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: add brackets font related properties.
	* libs/gcp/document.h: ditto.
	* plugins/paint/selection/bracketstool.cc: allow brackets font selection.
	* plugins/paint/selection/bracketstool.h: ditto.

2011-04-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/brackets.cc: fully implemented now.
	* mozilla-plugin/Makefile.am: fix build after moves to gcugtk.
	* mozilla-plugin/chem-viewer.cc: ditto.

2011-04-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/brackets.cc: display square and round brackets of all sizes.
	* libs/gccv/brackets.h: ditto.
	* plugins/paint/selection/brackets.ui: fix UI after API change.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-04-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/brackets.cc: start showing brackets.
	* libs/gccv/brackets.h: ditto.
	* plugins/paint/selection/bracketstool.cc: ditto.

2011-04-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/docprop.cc: make things compile with gtk+-2.14.
	* libs/gcp/docprop.h: ditto.
	* libs/gcp/newfiledlg.cc: ditto.
	* libs/gcp/newfiledlg.h: ditto.
	* libs/gcp/preferences.cc: ditto.
	* libs/gcp/preferences.h: ditto.
	* libs/gcp/reaction-prop-dlg.cc: ditto.
	* libs/gcr/atomsdlg.cc: ditto.
	* libs/gcu/filechooser.cc: ditto.
	* libs/gcu/spectrumdoc.cc: ditto.
	* plugins/paint/residues/residues-dlg.cc: ditto.
	* plugins/paint/templates/templatetool.cc: ditto.
	* programs/3d/window.cc: ditto.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: ditto.